# django-components

./: .gitignore  CHANGELOG.md  README.md  asv.conf.json  index.html  latest  mkdocs.yml  pyproject.toml  requirements-ci-python38.txt  requirements-ci.in  requirements-ci.txt  requirements-dev.in  requirements-dev.txt  requirements-docs.in  requirements-docs.txt  robots.txt  tox.ini  versions.json
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  copilot-instructions.md  lighthouserc.json
.github/workflows/: benchmark.yml  docs.yml  maint-docs-external-links.yml  maint-docs-lighthouse.yml  maint-docs-people.yml  maint-supported-versions.yml  pr-benchmark-comment.yml  pr-benchmark-generate.yml  pr-discord.yml  release-discord.yml  release-docs.yml  release-pypi.yml  tests-cross-browser.yml  tests.yml
0.130/: sitemap.xml
0.130/release_notes/: index.html
0.130/search/: search_index.json
0.132/: sitemap.xml
0.132/migrating_from_safer_staticfiles/: index.html
0.133/release_notes/: index.html
0.133/search/: search_index.json
0.134/release_notes/: index.html
0.135/search/: search_index.json
0.136/: objects.inv
0.136/search/: search_index.json
0.138/: sitemap.xml
0.138/migrating_from_safer_staticfiles/: index.html
0.138/search/: search_index.json
0.139.1/release_notes/: index.html
0.139/release_notes/: index.html
0.140.1/migrating_from_safer_staticfiles/: index.html
0.141.0/migrating_from_safer_staticfiles/: index.html
0.141.1/: sitemap.xml
0.141.3/migrating_from_safer_staticfiles/: index.html
0.141.3/release_notes/: index.html
0.141.3/search/: search_index.json
0.141.4/migrating_from_safer_staticfiles/: index.html
0.141.4/search/: search_index.json
0.141.5/migrating_from_safer_staticfiles/: index.html
0.141.5/releases/: index.html
0.141.6/: sitemap.xml
0.142.0/: sitemap.xml
0.142.0/plugins/: index.html
0.142.1/: 404.html
0.142.1/examples/: index.html
0.142.1/releases/: index.html
0.142.2/: 404.html
0.142.2/examples/: index.html
0.142.3/releases/: index.html
0.143.0/migrating_from_safer_staticfiles/: index.html
0.143.0/releases/: index.html
0.143.1/: 404.html
0.143.1/examples/: index.html
0.143.1/migrating_from_safer_staticfiles/: index.html
0.143.1/search/: search_index.json
0.143.2/: 404.html
0.143.2/benchmarks/: info.json  regressions.xml
0.144.0/benchmarks/: index.json  info.json
0.144.0/releases/: index.html
0.144.0/search/: search_index.json
0.145.0/: 404.html  objects.inv
0.145.0/benchmarks/: info.json
0.145.0/migrating_from_safer_staticfiles/: index.html
0.145.0/releases/: index.html
0.145.0/search/: search_index.json
0.146.0/: sitemap.xml
0.146.0/benchmarks/: info.json
0.146.0/migrating_from_safer_staticfiles/: index.html
0.146.0/plugins/: index.html
0.146.0/releases/: index.html
0.148.0/: 404.html  objects.inv  sitemap.xml
0.148.0/examples/: index.html
0.148.0/migrating_from_safer_staticfiles/: index.html
0.148.0/plugins/: index.html
0.148.0/releases/: index.html
0.149.0/: 404.html
0.149.0/releases/: index.html
0.150.0/: sitemap.xml
0.150.0/benchmarks/: info.json
0.150.0/release_notes/: index.html
0.150.0/search/: search_index.json
0.150.1/releases/: index.html
0.151.0/: sitemap.xml
0.151.0/benchmarks/: regressions.json
0.151.0/migrating_from_safer_staticfiles/: index.html
0.151.0/releases/: index.html
0.151.0/search/: search_index.json
0.151.1/: sitemap.xml
0.151.1/benchmarks/: regressions.json  regressions.xml
0.151.1/migrating_from_safer_staticfiles/: index.html
0.151.1/scripts/: reference.py
0.151.1/search/: search_index.json
benchmarks/: README.md  benchmark_templating.py  monkeypatch_asv_ci.py  utils.py
benchmarks/report/: index.json  info.json  regressions.xml
dev/: 404.html  objects.inv  sitemap.xml
dev/SUMMARY/: index.html
dev/benchmarks/: index.json  info.json  regressions.json  regressions.xml
dev/examples/: index.html
dev/migrating_from_safer_staticfiles/: index.html
dev/plugins/: index.html
dev/release_notes/: index.html
dev/releases/: index.html
dev/scripts/: reference.py
dev/search/: search_index.json
doc_site/design/: DESIGN.md  DESIGN_spike_10.md  DESIGN_spike_9.md
docs/: .nav.yml  README.md
docs/benchmarks/: index.json  info.json  regressions.json  regressions.xml
docs/community/: development.md  help.md
docs/devguides/: dependency_mgmt.md  slot_rendering.md
docs/django_components_people/: .nav.yml  django_components_people.md  people.yml
docs/examples/: .nav.yml  index.md  overview.md
docs/getting_started/: adding_dependencies.md  adding_js_and_css.md  adding_slots.md  components_in_templates.md  installation.md  parametrising_components.md  rendering_components.md  your_first_component.md
docs/overview/: compatibility.md  performance.md  security_notes.md  welcome.md
docs/reference/: .nav.yml  (+7 more)
docs_old/: .nav.yml
docs_site/: README.md  docs_versions.toml  manage.py
scripts/: codemod_google_sections.py  codemod_indent_examples.py  codemod_link_to_crossref.py  people.py  supported_versions.py  validate_links.py
tests/: conftest.py  test_attributes.py  test_autodiscover.py  test_benchmark_django.py  test_benchmark_django_small.py  test_benchmark_djc.py  test_benchmark_djc_small.py  test_cache.py  test_command_components.py  test_command_ext.py  test_command_list.py  test_component.py  test_component_cache.py  test_component_css.py  test_component_css_e2e.py  test_component_defaults.py  test_component_dynamic.py  test_component_error_fallback.py  test_component_js.py  test_component_js_e2e.py  test_component_media.py  test_component_typing.py  test_component_url.py  test_component_view.py  test_context.py  test_dependencies.py  test_dependency_manager.py  test_dependency_rendering.py  test_dependency_rendering_e2e.py  test_django_cache_tag.py  test_example_form.py  test_example_tabs.py  test_expression.py  test_extension.py  test_finders.py  test_hotreload.py  test_html_parser.py  test_integration_template_partials.py  test_node.py  test_registry.py  (+14 more)
(+3686 files in other folders)
