[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "django_components"
version = "0.151.0"
requires-python = ">=3.10, <4.0"
description = "A way to create simple reusable template components in Django."
keywords = ["django", "components", "css", "js", "html"]
readme = "README.md"
authors = [
    { name = "Emil Stenström", email = "emil@emilstenstrom.se" },
    { name = "Juro Oravec", email = "juraj.oravec.josefson@gmail.com" },
]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
# Package dependencies
dependencies = ["Django>=5.2", "djc-core>=1.3.0", "typing-extensions>=4.12.2"]
license = { text = "MIT" }

# See https://docs.pypi.org/project_metadata/#icons
[project.urls]
Homepage = "https://github.com/django-components/django-components/"
Documentation = "https://django-components.github.io/django-components/"
Changelog = "https://django-components.github.io/django-components/latest/releases/"
Issues = "https://github.com/django-components/django-components/issues"
Donate = "https://github.com/sponsors/EmilStenstrom"

###########################################
# ENVIRONMENT DEPENDENCIES
###########################################

[dependency-groups]

# Dev dependencies - install with `uv sync --group dev`
dev = [
    "django",
    "djc-core>=1.3.0",
    "django-template-partials",
    "tox",
    "pytest",
    "pytest-xdist",
    "pytest-django",
    "pytest-asyncio==1.4.0",
    "syrupy",
    "ruff==0.15.18",
    "pre-commit",
    "mypy",
    "playwright",
    "requests",
    "types-requests",
    "whitenoise",
    "pydantic",
    "pydantic-settings",
    "pygments",
    "pygments-djc",
    "asv",
    # NOTE: pin virtualenv to <20.31 until asv fixes integration
    # See https://github.com/airspeed-velocity/asv/issues/1484
    "virtualenv==21.5.1",
    "typing-extensions>=4.12.2",
    "pathspec",
    "PyGithub",
    "pyyaml",
    "beautifulsoup4>=4.14.3",
    "python-frontmatter>=1.3.0",
]

# CI dependencies - install with `uv sync --group ci`
ci = [
    "tox",
    "tox-gh-actions",
    "pytest-xdist",
    "playwright",
    "requests",
    "types-requests",
    "whitenoise",
    "asv",
    # NOTE: pin virtualenv to <20.31 until asv fixes integration
    # See https://github.com/airspeed-velocity/asv/issues/1484
    "virtualenv==21.5.1",
    "pytest-asyncio",
    "pytest-django",
    "typing-extensions>=4.12.2",
    "pathspec",
    "beautifulsoup4>=4.14.3",
]

# Docs dependencies - install with `uv sync --group docs`
docs = [
    # The old mkdocs / Material / mike / mkdocstrings stack was removed at the
    # Phase 6 cutover - the docs site is now built by the `docs_site` Django
    # project, not mkdocs. The deps below are the ones the new builder actually
    # uses; several (griffe, lxml, pymdown-extensions) were promoted
    # from transitive deps of the old stack so they survive its removal.
    "pymdown-extensions",
    # griffe powers the new docs-site API reference generator (the mkdocstrings
    # replacement built in the docs-site migration). Promoted from a transitive
    # dep of mkdocstrings-python to a direct dep so it survives the Phase 6
    # removal of the old mkdocs/mkdocstrings stack.
    "griffe>=1.15.0",
    # lxml powers the docs-site build guardrails: the shared SiteIndex HTML
    # walker and the HTML well-formedness check (recover=False parsing).
    "lxml",
    # pagefind builds the static search index over the built site (Phase 5a).
    # The `[bin]` extra pulls the bundled Rust binary (pagefind-bin), so the
    # post-build step shells out to `python -m pagefind` with no Node toolchain
    # required. The `extended` extra (CJK segmentation) is unnecessary for our
    # English docs and roughly triples the binary size.
    "pagefind[bin]",
    # minify-html (Rust-backed, MIT) is the post-build HTML minifier for the
    # docs-site build (Phase 5c, feature 5c.14), replacing mkdocs-minify-plugin's
    # abandoned htmlmin2 backend. Ships PyPI wheels (no toolchain). The build step
    # imports it lazily and degrades gracefully if it's missing.
    "minify-html",
    # packaging backs the vendored mike `Versions` class (docs-site versioning,
    # Phase 5b) - PEP 440 ordering for the versions.json manifest, with the `dev`
    # sentinel sorting above releases. Declared directly because the builder
    # imports it (it replaced the stale single-release `verspec` dep mike used).
    "packaging",
    # Pygments 2.20 breaks mkdocstrings signature rendering by rejecting the
    # None filename value passed through pymdownx.highlight.
    "pygments<2.21",
    "pygments-djc",
    "django>=5.2",
    "djc-core>=1.3.0",
]

###########################################
# BUILD TOOLS
###########################################

[tool.setuptools.packages.find]
where = ["src"]
include = ["django_components*"]
exclude = ["django_components.tests*"]
namespaces = false

###########################################
# TESTING TOOLS
###########################################

[tool.pytest.ini_options]
testpaths = ["tests", "docs_site/examples"]
asyncio_mode = "auto"
markers = [
    "e2e: browser-based end-to-end tests that need the Django test server",
    "benchmark_snapshot: large benchmark-render snapshot tests",
]

###########################################
# FORMATTING & TYPE-CHECKING TOOLS
###########################################

[tool.black]
line-length = 119
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | activate
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 119
src = ["src", "tests"]
exclude = [
    "migrations",
    "manage.py",
    "settings.py",
    "env",
    ".env",
    # From mypy
    "test_structures",
    # Vendored third-party code, kept verbatim (see docs_site/.../_vendor/).
    "_vendor",
    # Committed, frozen old-version doc snapshots (gh-pages import, feature 6.2):
    # pre-built HTML plus historical example .py files, not source to lint.
    "docs_site/versions",
]

# See https://docs.astral.sh/ruff/linter/#rule-selection
[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Annotations
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed in `*args`
    # Docstring
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D106", # Missing docstring in public nested class
    "D107", # Missing docstring in `__init__`
    "D203", # Incorrect blank line before class
    "D205", # 1 blank line required between summary line and description
    "D212", # Multi-line docstring summary should start at the first line
    "D400", # First line should end with a period
    "D401", # First line of docstring should be in imperative mood
    "D404", # First word of the docstring should not be "This"
    "D412", # No blank lines allowed between a section header and its content ("Examples")
    "D415", # First line should end with a period, question mark, or exclamation point
    # Exceptions
    "EM101", # Exception must not use a string literal, assign to variable first
    "EM102", # Exception must not use an f-string literal, assign to variable first
    # `TODO` comments
    "FIX002", # Line contains TODO, consider resolving the issue
    "TD002",  # Missing author in TODO; try: `# TODO(<author_name>): ...` or `# TODO @<author_name>: ...`
    "TD003",  # Missing issue link for this TODO
    "TD004",  # Missing colon in TODO
    # Code
    "C901",    # `test_result_interception` is too complex (36 > 10)
    "COM812",  # missing-trailing-comma (NOTE: Already handled by formatter)
    "ERA001",  # Found commented-out code (NOTE: Too many false positives)
    "INP001",  # File `...` is part of an implicit namespace package. Add an `__init__.py`.
    "PLR0915", # Too many statements (64 > 50)
    "PLR0911", # Too many return statements (7 > 6)
    "PLR0912", # Too many branches (31 > 12)
    "PLR0913", # Too many arguments in function definition (6 > 5)
    "PLR2004", # Magic value used in comparison, consider replacing `123` with a constant variable
    "RET504",  # Unnecessary assignment to `collected` before `return` statement
    "RET505",  # Unnecessary `elif` after `return` statement
    "S308",    # Use of `mark_safe` may expose cross-site scripting vulnerabilities
    "S603",    # `subprocess` call: check for execution of untrusted input
    "SIM108",  # Use ternary operator `...` instead of `if`-`else`-block
    "SIM117",  # Use a single `with` statement with multiple contexts instead of nested `with` statements
    "SLF001",  # Private member accessed: `_registry`
    "TRY300",  # Consider moving this statement to an `else` block
    "TRY301",  # Abstract `raise` to an inner function

    # TODO: Following could be useful to start using, but might require more changes.
    "C420",    # Unnecessary dict comprehension for iterable; use `dict.fromkeys` instead
    "PERF401", # Use `list.extend` to create a transformed list
    "PERF203", # `try`-`except` within a loop incurs performance overhead
    "FBT001",  # Boolean-typed positional argument in function definition
    "FBT002",  # Boolean default positional argument in function definition
    "TRY003",  # Avoid specifying long messages outside the exception class
    # TODO_V1 - Rename error to suffix with `Error` before v1?
    "N818", # Exception name `NotRegistered` should be named with an Error suffix
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ARG002",  # Unused method argument: `components_settings`
    "ANN",     # Annotations are not needed for tests
    "N806",    # Variable `SimpleComponent` in function should be lowercase
    "PLC0415", # `import` should be at the top-level of a file
    "RUF012",  # Mutable class attributes should be annotated with `typing.ClassVar`
    "S101",    # Use of `assert` detected
    "TRY002",  # Create your own exception
]
"benchmarks/*" = [
    "ARG002",  # Unused method argument: `components_settings`
    "ANN",     # Annotations are not needed for tests
    "N806",    # Variable `SimpleComponent` in function should be lowercase
    "PLC0415", # `import` should be at the top-level of a file
    "RUF012",  # Mutable class attributes should be annotated with `typing.ClassVar`
    "S101",    # Use of `assert` detected
    "TRY002",  # Create your own exception
]
"sampleproject/*" = [
    "ARG002", # Unused method argument
    "ANN",    # Annotations are not needed for tests
    "T201",   # `print` found
    "DTZ",    # `datetime` found
]
"docs_site/examples/*" = [
    "ARG002", # Unused method argument
    "ANN",    # Annotations are not needed for tests
    "S101",   # Use of `assert` detected
    "T201",   # `print` found
    "DTZ",    # `datetime` found
    "RUF012", # Class-attr dicts (e.g. DocsExample.fragments) are the documented convention
]
# The docs site builder is internal tooling (a Django project), not the shipped
# library, so it isn't held to the package's full annotation strictness.
"docs_site/*" = [
    "ARG001", # Unused function argument (e.g. a Django view's `request`)
    "ARG002", # Unused method argument (Django / djc framework signatures)
    "ANN",    # Full type annotations not required for internal build tooling
    "BLE001", # Intentional broad `except` in the per-page build loop
    "E501",   # Line length: inline SVG path data in templates can't be broken
    "T201",   # `print` is fine for build-command progress output
    "TC003",  # Don't force stdlib type-only imports into TYPE_CHECKING blocks
]
# Build-tool tests assert and touch the filesystem freely; relax test-only rules.
"docs_site/tests/*" = [
    "S101",   # `assert` is the whole point of a test
    "PT",     # Project tests don't follow all pytest-style conventions
    "PTH",    # Tests build paths directly (Path("."), os.path) for fixtures
    "INP001", # Test dirs are intentionally not packages
    "SLF001", # Tests may poke at internals
    "PLR2004", # Magic values are fine in test assertions
]

[tool.ruff.lint.isort]
known-first-party = ["django_components"]

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
# `docs_site/examples` holds runnable demo code (many same-named `component.py` /
# `page.py` modules with no package markers), not the shipped library or build
# tooling - exclude it like `sampleproject`. ("build" also matches the builder's
# `docs_site/apps/docs/build/` tree.)
# `^site/` (anchored so it never matches `docs_site`) is the gitignored build
# output, which after `docs_assemble` contains the copied frozen version dirs.
exclude = ["build", "sampleproject", "test_structures", "_vendor", "docs_site/examples", "docs_site/versions", "^site/"]

[[tool.mypy.overrides]]
module = "django_components.*"
disallow_untyped_defs = true

# TODO - Review these rules once we officially support Pylance / Pyright
#        See https://github.com/django-components/django-components/issues/1397
[tool.basedpyright]
reportMissingTypeArgument = "none"
reportUnknownParameterType = "none"
reportAny = "none"
reportExplicitAny = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnknownMemberType = "none"
reportAttributeAccessIssue = "none"
reportPrivateUsage = "none"
reportConstantRedefinition = "none"
reportUnusedCallResult = "none"
reportImplicitStringConcatenation = "none"
reportUnannotatedClassAttribute = "none"
reportSelfClsParameterName = "none"
reportDeprecated = "none"
reportUnusedParameter = "none"
reportUninitializedInstanceVariable = "none"
reportRedeclaration = "none"
reportIncompatibleVariableOverride = "none"
